update the documentation for the aoi consuption
